# Symmetry

./: .gitignore  N8symmetries.txt  README.md  cases.py  data2.txt  dataedge.txt  dupes.txt  gen.py  notes.txt  pyproject.toml  setup.py  sym.py  verify.py
.upm/: store.json
data/: L6.ll.txt  L6.txt  branches01.txt  branches02.txt  branches04.txt  branches05.txt  branches06.txt  branches07.txt  branches08.txt  branches09.txt  branches10.txt  branches11.txt  branches12.txt  branches13.txt  branches14.txt  branches15.txt  branches16.txt  branches17.txt  branches18.txt  branches19.txt  branches20.txt  branches21.txt  branches22.txt  branches23.txt  branches24.txt  branches25.txt  branches26.txt  branches27.txt  branches28.txt  branches29.txt  branches30.txt  branches31.txt  branches32.txt  branches33.txt  branches34.txt  branches35.txt  branches37.txt  branches39.txt  branches41.txt  branches43.txt  (+67 more)
data/cases/: cases01.txt  cases02.txt  cases03.txt  cases04.txt  cases05.txt  cases06.txt  cases07.txt  cases08.txt  cases09.txt  cases10.txt  cases11.txt  cases12.txt  cases13.txt  cases14.txt  cases15.txt  cases16.txt  cases17.txt  cases19.txt
data/k/: midrc.100000N.txt  midrc.k1.txt  midrc.k2.txt  rings1.k2.txt  rings2.k2.txt  rings2.k3.txt  rings2.k6.txt  rings2.k7.txt  rings2.k8.txt  rings3.k12.txt  rings3.k3.txt  rings3.k5.txt  rings3.k6.txt  rings3.k8.txt  rings3.k9.txt
data/ll/: midrc.k2.txt  rings1.k2.txt  rings2.k2.txt  rings3.k2.txt
data/verify/: branches03.txt  branches04.txt  branches05.txt  branches06.txt  branches08.txt  branches10.txt  branches11.txt  branches12.txt  branches13.txt  branches14.txt  branches16.txt  branches18.txt  branches20.txt  branches21.txt  branches22.txt  branches23.txt  branches24.txt  branches25.txt  branches26.txt  branches27.txt  branches28.txt  branches29.txt  branches30.txt  branches31.txt  branches32.txt  branches33.txt  branches34.txt  branches35.txt  branches37.txt  branches39.txt  branches41.txt  branches43.txt  branches45.txt  branches47.txt  branches49.txt
