[tool.poetry]
name = "symmetry"
version = "0.1.0"
description = ""
authors = ["AlexBlandin <20842735+AlexBlandin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tabulate = "^0.8.1"
tqdm = "^4.30.0"
psutil = "^5.0.0"
humanize = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
