[project]
name = "symmetry"
description = "generate nqueens symmetries"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AlexBlandin" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
indent-width = 2
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ERA",    # code comments actually help 
  "INP001", # useless before hatch
  "TD003",  # not using github to track todo/issues
  "S311",   # I know when to use secrets
  # "T20",    # print is good, actually 
  "W191",   # ruff format
  "E111",   # ruff format
  "E114",   # ruff format
  "E117",   # ruff format
  "E203",   # ruff format
  "D206",   # ruff format
  "D212",   # ruff format
  "D300",   # ruff format
  "Q",      # ruff format
  "COM812", # ruff format
  "COM819", # ruff format
  "ISC001", # ruff format
  "ISC002", # ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 120
from_first = true
indent = "  "
